--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,12 @@
 /* Light Mode (Default) */
 :root {
-  --background-color: #ffffff;
-  --text-color: #000000;
-  --header-background: #f5f5f5;
-  --mix-blend-mode: screen;
-  --filter: none;
-  --text-shadow: 0px 0px 10px rgb(82, 18, 18);
-  --box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  --background-color: #000000;
+  --text-color: #ffffff;
+  --header-background: #1e1e1e;
+  --mix-blend-mode: multiply;
+  --filter: invert(1);
+  --text-shadow: 0px 0px 10px rgb(255, 112, 112);
+  --box-shadow: 0 3px 10px rgba(255, 255, 255, 1);
 }
 
 /* Dark Mode */
